text overlapping of nav bar and main content fixed by z indexing

--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ a{
   justify-content: space-between;
   align-items: center;
   padding: 1rem 0 1rem 0;
+  z-index: 1;
 }
 .dark-badge{
   background-color: #000;
